changed search box color

--- a/dgcl.html
+++ b/dgcl.html
@@ -8,7 +8,7 @@
     form#search {
       position:fixed;
       top: 2ex;
-      background-color: green;
+      background-color: #6BB6FF;
       padding: 6px;
       border-radius: 8px;
     }
