--- a/dgcl.html
+++ b/dgcl.html
@@ -27,7 +27,8 @@
       
       var meta_tab_el = $('<div class="meta-tab"></div>');
       meta_tab_el.appendTo(section_el);
-      $('<div>' + subchapter['number'] + '. ' + section['number'] + '</div>').appendTo(meta_tab_el);
+      $('<div>' + subchapter['number'] + '</div>').appendTo(meta_tab_el);
+      $('<div>' + section['number'] + '</div>').appendTo(meta_tab_el);
       $('<div><a href="' + section['ref_url'] + '">orig</a></div>').appendTo(meta_tab_el);
       
       var content_el = $('<div class="content"></div>');
