added "logo" text

--- a/dgcl.html
+++ b/dgcl.html
@@ -8,10 +8,15 @@
 </head>
 
 <body>
-  <form id='search' action='javascript:return false;'>
-    <input id='query' size=50></input>
-    <input type='submit' value='search'></input>
-  </form>
+  <div id='header'>
+    <span id='logo'>DGCL</span>
+    <span>
+      <form id='search' action='javascript:return false;'>
+        <input id='query' size=50></input>
+        <input type='submit' value='search'></input>
+      </form>
+    </span>
+  </div>
   
   <div id='hits'></div>
   
