--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>DGCL</title>
+  <link href='http://fonts.googleapis.com/css?family=Forum&subset=latin&v2' rel='stylesheet' type='text/css'>
   <script src='data.js'></script>
   <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.2.min.js'></script>
   <link rel="stylesheet" type="text/css" href="style.css" />
