--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>DGCL</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <link href='http://fonts.googleapis.com/css?family=Forum&subset=latin&v2' rel='stylesheet' type='text/css'>
   <script src='data.js'></script>
   <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.6.2.min.js'></script>
