made title more informative

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>DGCL</title>
+  <title>DGCL.info - search engine for Delaware General Corporation Law</title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
   <link href='http://fonts.googleapis.com/css?family=Forum&subset=latin&v2' rel='stylesheet' type='text/css'>
   <script src='data.js'></script>
