added intro section describing the page. closes #13

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     </form>
   </div>
   
+  <p id='intro'>
+    DGCL.info is a search engine for Delaware General Corporation Law. Use the search box to find sections containing your query. Click sections to expand and contract them.
+  </p>
+  
   <div id='hits'></div>
   
   <script>
