added email link to intro

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
 </head>
 
 <body>  
-  <p id='intro'>
-    DGCL.info is a search engine for Delaware General Corporation Law. Use the search box below to find sections containing your query. Click sections to expand and contract them.
-  </p>
+  <div id='intro'>
+    <p>DGCL.info is a search engine for Delaware General Corporation Law. Use the search box below to find sections containing your query. Click sections to expand and contract them. Direct inquiries to <a href='mailto:dgcl.info@gmail.com'>dgcl.info@gmail.com</a>.
+    </p>
+  </div>
   
   <div id='header'>
     <h1>DGCL</h1>
