optimized highlighter for case that the query is empty

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     var NUM_SNIPPET_CHARS = 240;
     
     function highlight(query, string) {
+      if (query === '') return string;
       return string.replace(new RegExp('(' + query + ')', 'ig'), '<span class="match">$1</span>');
     }
     
