added disclaimer and last-updated note

--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
   <div id='intro'>
     <p>DGCL.info is a search engine for Delaware General Corporation Law. Use the search box below to find sections containing your query. Click sections to expand and contract them. Direct inquiries to <a href='mailto:DGCL.info@gmail.com'>DGCL.info@gmail.com</a>.
     </p>
+    <p class='de-emph'>Statutes last retrieved from http://delcode.delaware.gov/title8/c001/index.shtml on July 10, 2011.
+    </p>
+    <p class='de-emph'>DISCLAIMER: DGCL.info makes no warranty nor assumes legal liability or responsibility for the information on this site. Seek legal counsel for help interpreting individual statutes.
+    </p>
   </div>
   
   <div id='header'>
