added section symbol in front of section number in meta tabs

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       // Build tab on the side of the content, to hold meta data.
       var meta_tab_el = $('<div class="meta-tab"></div>');
       meta_tab_el.appendTo(section_el);
-      $('<h3>' + subchapter['number'] + '. ' + section['number'] + '</h3>').appendTo(meta_tab_el);
+      $('<h3>' + subchapter['number'] + '. §' + section['number'] + '</h3>').appendTo(meta_tab_el);
       $('<a href="' + section['ref_url'] + '">source</a>').appendTo(meta_tab_el);
       
       // Build content element.
