added terms of service based on WordPress ones

--- a/index.html
+++ b/index.html
@@ -171,8 +171,19 @@
     </p>
     <p class='de-emph'>Statutes last retrieved from http://delcode.delaware.gov/title8/c001/index.shtml on July 10, 2011.
     </p>
-    <p class='de-emph'>DISCLAIMER: DGCL.info makes no warranty nor assumes legal liability or responsibility for the information on this site. Seek legal counsel for help interpreting individual statutes.
-    </p>
+    <div id='tos'>
+      <h2>Terms of Service</h2>
+      <p>The following terms and conditions govern all use of the DGCL.info website and all content, services and products available at or through the Website. By accessing and using DGCL.info, you agree to be legally bound by the terms and conditions set forth below.
+      </p>
+      <ol>
+        <li>Disclaimer of Warranties. The Website is provided “as is”. DGCL.info hereby disclaims all warranties of any kind, express or implied, including, without limitation, the warranties of merchantability, fitness for a particular purpose and non-infringement. DGCL.info makes no warranty that the Website will be error free or that access thereto will be continuous or uninterrupted. You understand that your use of the Website is at your own discretion and risk. The Website is not guaranteed to accurately or completely reflect Delaware General Corporation Law, and all information found on the Website should be checked against the official text of the Delaware General Corporation Law.
+        </li>
+        <li>Limitation of Liability. In no event will DGCL.info be liable with respect to any subject matter of this agreement under any contract, negligence, strict liability or other legal or equitable theory for: (i) any special, incidental or consequential damages; (ii) the cost of procurement or substitute products or services; or (iii) for interruption of use or loss or corruption of data.
+        </li>
+        <li>Indemnification. You agree to indemnify and hold harmless DGCL.info from and against any and all claims and expenses, including attorneys’ fees, arising out of your use of the Website.
+        </li>
+      </ol>
+    </div>
   </div>
   
   <div id='header'>
